Update CMMS after company server modifications
