# lib/api-spec/openapi.yaml
@@ -2336,6 +2336,8 @@ components:
           type: ["number", "null"]
         dimensionDepthCm:
           type: ["number", "null"]
+        dimensionsNote:
+          type: ["string", "null"]
         weightKg:
           type: ["number", "null"]
         utilitiesPowerSupply:
@@ -2394,6 +2396,8 @@ components:
           type: ["number", "null"]
         dimensionDepthCm:
           type: ["number", "null"]
+        dimensionsNote:
+          type: string
         weightKg:
           type: ["number", "null"]
         utilitiesPowerSupply:
